--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Notepad"
         mc:Ignorable="d"
+        Icon="Resources/icon.ico"
         GlowBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="2"
         WindowStartupLocation="CenterScreen"
