--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,7 +16,7 @@
         TitleCaps="False"
         ResizeMode="CanResizeWithGrip"
         TitlebarHeight="36"
-        Title="iNotepad" Height="450" Width="585">
+        Title="iNotepad" Height="550" Width="620">
     
     <Window.CommandBindings>
         <CommandBinding Command="Save"
@@ -49,7 +49,6 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="26"/>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Menu Padding="4"
@@ -118,11 +117,12 @@
         </Menu>
         <avalonEdit:TextEditor     
             Grid.Row="1"
-            Grid.Column="1"
+            Grid.Column="0"
             SyntaxHighlighting="C++"
-            Padding="1"
+            Padding="3"
             FontSize="16"
             WordWrap="True"
+            FontFamily="Courier New"
             LineNumbersForeground="DarkTurquoise"
             ShowLineNumbers="True"
             Name="richtextbox"
